--- a/labs/HTML_CH09_LAB/Part 2/styles/site.css
+++ b/labs/HTML_CH09_LAB/Part 2/styles/site.css
@@ -1,40 +1,277 @@
+body {
+  font-family: "Quicksand";
+  font-weight: 600;
+  min-height: 100vh;
+  background-color: blanchedalmond;
+
+}
+#wrapper {
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  max-width: 1200px;
+  background-color: rgb(253, 241, 241);
+}
+
 .header {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
 }
 
 .header-logo {
-  width: 100px;
-  height: 100px;
-  margin: 5px;
+  margin-top: 1em;
 }
 
 .header-text {
-  padding: .5em;
   flex-shrink: 0;
 }
 
 .header-text a {
   text-decoration: none;
   color: black;
+  font-family: "Quicksand";
+  font-weight: 600;
+  font-size: 1.5em;
 }
 
 .header-searchform {
-  flex-basis: 50%;
+  flex-basis:50%;
   flex-grow: 1;
-  margin-right: 1em;
+  margin-right: 2%;
+  margin-left: 2%;
+
 }
 
 .header-searchbox {
   width: 100%;
   height: 3em;
   padding: .5em;
+  margin-bottom: 5px;
 }
 
 .header-account, .header-order {
-  width: 50px;
-  height: 50px;
-  margin: 50px;
+ width: 3em;
 }
+
+.navbar {
+  background-color: green;
+  width: 100%;
+}
+#quick-menu {
+  background-color: red;
+  color: white;
+  margin: 5px;
+  padding: 5px;
+}
+.navbar-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding-left: 0;
+}
+
+.navbar-item {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  margin: 1em;
+  width: 80%;
+  background-color: seagreen;
+  color: white;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.navbar-link {
+  display: flex;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: seagreen;
+  color: white;
+  padding: 1em;
+  margin: 1em;
+  list-style-type: none;
+}
+
+.navbar-link:hover, .navbar-link:focus {
+  background-color: grey;
+}
+
+.combo-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style: none;
+  padding-left: 0;
+  ;
+}
+
+h2 {
+  text-align: center;
+}
+
+.combo {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  border: 2px solid black;
+  margin: 2px;
+  padding: 2px;
+  background-color: white;
+  color: black;
+}
+
+#entree-section, #sides-section, .jump-section, #beverage-section{
+  background-color: red;
+  padding: 5px;
+}
+.entree-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  list-style: none;
+  padding-left: 0;
+}
+.entree {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 2px solid black;
+  margin: 2px;
+  padding: 2px;
+  list-style-type: none;
+  width: 80%;
+  background-color: white;
+}
+
+.jump-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  flex: 0 0 200px;
+  list-style: none;
+  padding: 0;
+  
+}
+
+.jump-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+  border-radius: 10px;
+  flex: 1 0 180px;
+  height: 180px;
+  margin: 7px;
+  background-color: white;
+}
+ul, li {
+  list-style-type: none;
+  list-style-position: inside;
+  margin: 0;
+  padding: 0;
+}
+
+.sides-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.side {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 2px solid black;
+  padding: 2px;
+  margin: 2px;
+  width: 80%;
+  background-color: white;
+}
+
+.beverages-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.beverage {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 80%;
+  border: 2px solid black;
+  margin: 2px;
+  padding: 2px;
+  background-color: white;
+}
+.copyright {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+@media (max-width: 599px) { 
+  #wrapper {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+
+}  
+
+@media (min-width: 600px) {
+
+  .navbar-menu {
+    flex-direction: row;
+  }
+   
+  .navbar-item {
+    flex-direction: row;
+  }
+  #wrapper {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  #quick-menu {
+    flex-direction: column;
+    min-width: 200px;
+    max-width: 300px;
+    flex: 1;
+  }
+  .combo-list {
+    flex-direction: column;
+    flex: 1;
+    min-width: fit-content;
+
+  }
+  .jump-section  {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-self: stretch;
+  }
+}
+
+
+@media (min-width: 900px) { 
+  #main{
+    max-width: 50%;
+
+ }
+
+
+@media (min-width: 1200px) { @content; }
+
+
+@media (min-width: 2500px) { @content; }
+
