--- a/labs/HTML_CH09_LAB/Part 3/styles/site.css
+++ b/labs/HTML_CH09_LAB/Part 3/styles/site.css
@@ -8,24 +8,32 @@
 body{
   background-color: #0d2b67;
   color: #041122;
+  margin: 0 auto;
+  padding: 0;
 }
 #wrapper {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   padding: .899%;
+  flex-shrink: 0;
+  min-width: 130px;
 }
 .header {
   background-color: #ff7062;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  
+  flex: 1 1;
+}
+.main-header{
+  display: flex;
 }
 .logo{
-  max-width: 100px;
-  max-height: 100px;
+  width: 120px;
+  height: 120px;
+  margin-left:2%;
+  margin-right:2%;
 }
 .navbar {
   background-color: #32a2ad;
@@ -37,39 +45,221 @@ body{
   list-style: none;
   padding: 0;
 }
-.navbar-item{
+.navbar-link{
 padding: 2px;
+border: 2px dashed #27848d;
+margin: .3em;
+}
+.navbar-link a{ 
+  color: whitesmoke;
+  text-decoration: none;
 }
 .main{
   background-color: #a9e2ff;
+  display: flex;
+  flex-flow: column-reverse wrap;
+  align-items: center;
+  margin: 0;
+  padding: 0;
 }
-
+.section-one{
+  display: flex;
+  flex-flow: column wrap;
+  margin-bottom: 1em;
+}
+.home-section{
+  display: flex;
+  width: 100%;
+}
+.section-two{
+  display: flex;
+  margin-bottom: 1em;
+}
+.headshot{
+  border: .45em dashed #0d2b67;
+  width: 80%;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  padding: 0;
+}
+.education-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.ranken-logo{
+  max-width: 64px;
+}
 footer{
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
   color: whitesmoke;
-
+  text-align: center;
 }
+footer a{
+  color: whitesmoke;
+  text-decoration: none;
+}
+
 @media (max-width: 599px) {
-
-}
-@media (min-width: 600px) {
-  .header {
-    flex-flow: row wrap;
+  .header{
+    flex-direction: column-reverse;
+  }
+  .main-header{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
-  .name, .title {
-    flex: 1 0 2em;
+  .header-title{
+    text-align: center;
   }
-}
-@media (min-width: 1200px) {
+
+  .navbar-list{
+    flex-direction: column;
+  }
+  .main{
+    margin-top: 1%;
+  }
   .section-one{
-    max-width: 70%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 5%;
+  }
+  .home-section{
+    flex-direction: column;
   }
   .section-two{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 600px) {
+  .main-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+  }
+  .main-title{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .name{
+    width: 50%;
+  }
+  .main{
+    margin-top: 1%;
+  }
+  .section-one{
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .home-section{
+    width: 80%;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .section-two{
+    align-items: center;
+    justify-content: center;
+  }
+} 
+
+@media (min-width: 900px) {
+  .header {
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+  } 
+  .main-header{
+    justify-content: flex-start;
+  }
+  .header-title{
+    display: flex;    
+    flex-wrap: wrap;
+  }
+  .name{
+    width: 50%;
+  }
+  .main{
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 100%;
+    margin-top: 1.29%;
+    padding: 0;
+  }
+  .section-one{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    order: 2;
+    max-width: 70%;
+    padding: 0;
+  }
+  .home-section{
+    width: 80%; 
+  }
+  .education-section{
+    flex-direction: column; 
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+  }
+  .section-two {
+    align-items: center;
+    order: 1;
     max-width: 30%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navbar-list{
+    justify-content: flex-start;
+  }
+  .navbar-link{
+    flex: 1 0;
+    max-width: 10%;
+  }
+  .main{
+    flex-direction: row;
+    align-items: flex-start;
+    width: 100%;
+  }
+  .section-one{
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .home-section {
+    align-items: flex-start;
+    padding: 0;
+    max-width: 95%;
+    text-align: left;
+  }
+  .education-section{
+    flex-direction: row;
+    padding: 0;
+    max-width: 95%;
+    text-align: left;
+  }
+  .section-two{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
   }
   .copyright{
     align-self: flex-end;
