--- a/tests/MIDTERM/styles/site.css
+++ b/tests/MIDTERM/styles/site.css
@@ -4,6 +4,7 @@
 body {
 font-family: "Red Hat Text", Arial, Helvetica, sans-serif;
 margin: 0 auto;
+padding: 0;
 }
 /* HEADER */
 .navbar-brand {
@@ -28,12 +29,12 @@ margin: 0 auto;
   }
 }
 
-li a {
+.nav-item {
   position: relative;
   color: black;
   font-weight: 700 bold;
 }
-li a::before{
+.nav-item::before{
   position: absolute;
   content:'';
   margin-top: .26em;
@@ -46,20 +47,27 @@ li a::before{
   transition: 0.4s ease-in-out;
   background-color: black;
 }
-li a:hover::before{
+.nav-item:hover::before{
   width: 100%;
   background-color: whitesmoke;
 }
 #hero {
   height: 80vh;
 }
-
+#signup-hero {
+  height: 20vh;
+}
+#donation-hero {
+  height: 40vh;
+}
+#faq-hero {
+  height: 40vh;
+}
 @media (max-width: 375px) {
   #hero {
     height: 100vh;
   }
 }
-
 .hero-text{
   color: aliceblue;
   text-shadow: 1px 1px 1px grey;
@@ -69,10 +77,13 @@ li a:hover::before{
   background-color: hsla(220 100% 70% / 0.25);
   backdrop-filter: blur(5px);
 }
-.social-links > a {
+.social-links {
   margin-bottom: 1em;
+}
+.social-link{
   text-decoration: none;
 }
+
 @media (max-width: 991px) {
 
   #header .navbar-toggler {
@@ -101,6 +112,9 @@ li a:hover::before{
   }
 }  
 /* MAIN */
+main {
+  min-height: 100vh;
+}
 .section-heading { 
   font-weight: 900;
   font-size: x-large;
@@ -118,21 +132,78 @@ li a:hover::before{
   padding-left: 2em;
   padding-right: 2em;
 }
+#about-carousel { 
+  min-width: 300px;
+  align-self: center;
+}
+@media (min-width: 992px) {
+  #about-carousel,
+  .about-para {
+  width: 50%;
+  }
+  .about-para,
+  .section-body {
+    font-size: x-large;
+  }
+  .project-content {
+    font-size: larger;
+  }
+}
+@media (min-width: 1600px) {
+  #about-carousel {
+   width: 70%;
+  }
+  .about-para{
+    width: 30%;
+  }
+  .project-content {
+    font-size: x-large;
+  }
+}
+@media (max-width: 1200px) {
+  .hidden-logo {
+    display: none;
+  }
+}
+.card-img-top{
+  width: 256px;
+  align-self: center;
+}
+.toast {
+  bottom: 15px;
+  right: 15px;
+}
+.toast a{
+  text-decoration: none;
+}
+.card-title {
+  font-size: x-large;
+  border-bottom: 2px solid blue;
+}
+.card-link{
+  text-decoration: none;
+}
 /* FOOTER SECTION */
 footer {
   width: 100%;
+  padding: .5em;
 }
 footer a {
   text-decoration: none;
-  color: black;
-
+}
+.footer-content {
+  color: whitesmoke;
 }
 footer li, 
 footer ul {
  list-style: none;
   padding: 0;
 }
+.copyright {
+  color: whitesmoke;
+}
 .footer-content-header {
-  font-weight: bold;
-  border-bottom: 1px solid black;
+  color: whitesmoke;
+  font-weight: 600;
+  border-bottom: 1px solid whitesmoke;
 }
